@@ -10,6 +10,8 @@ Changes log
          classpath. Reported by Julien Landure.
        - Amazon S3 authentication could fail due to new subdomain 
          names like "s3[a-z0-1\\-]*.amazonaws.com".
+       - Fixed bug with the testing of equality of Roles in RoleAuthorizer.
+         Reported by Tim Peierls.         
     - Misc
        - Clarified in log trace the need to manually register connector
          helpers on the Android edition.
